app/src/test/resources/programs/invalid/conditionals/conditionNotBoolType.exe
// 'if' condition is not a 'Bool' type
foo main() -> Int = {
    if 5 then 1 else 0
}
